--- a/Case_1/case_1/package.json
+++ b/Case_1/case_1/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.21.3",
